Added an additional OpenAPI v3 endpoint Announced deprecation for the OpenAPI v2 support
