# src/main/java/io/strimzi/kafka/bridge/http/HttpOpenApiOperations.java
@@ -50,8 +50,12 @@ public enum HttpOpenApiOperations {
     HEALTHY("healthy"),
     /** check the readiness of the bridge */
     READY("ready"),
-    /** get the OpenAPI specification */
+    /** get the OpenAPI v2 specification */
     OPENAPI("openapi"),
+    /** get the OpenAPI v2 specification */
+    OPENAPIV2("openapiv2"),
+    /** get the OpenAPI v3 specification */
+    OPENAPIV3("openapiv3"),
     /** get general information (i.e. version) about the bridge */
     INFO("info"),
     /** get metrics (if enabled) in Prometheus format */
